--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,10 @@
     "responsive-nav": "^1.0.39",
     "lodash": "^4.7.0",
     "ng-cookies": "~1.1.1",
-    "angular-cookies": "~1.5.5"
+    "angular-cookies": "~1.5.5",
+    "angular-oauth2": "^4.0.0",
+    "angular-bootstrap-switch": "^0.5.0",
+    "angular-localization": "^1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
