--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,7 @@
     "angular": "~1.5.3",
     "bootstrap": "~3.3.6",
     "angular-ui-router": "~0.2.15",
-    "angular-translate": "^2.11.0",
+    "angular-translate": "~2.11.0",
     "angular-fontawesome": "^1.0.0",
     "bootstrap-sidebar": "^0.2.2",
     "responsive-nav": "^1.0.39",
@@ -47,7 +47,8 @@
     "angular-cookies": "~1.5.5",
     "angular-oauth2": "^4.0.0",
     "angular-bootstrap-switch": "^0.5.0",
-    "angular-localization": "^1.2.1"
+    "angular-bootstrap": "~1.3.2",
+    "AngularJS-Toaster": "angularjs-toaster#~2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
