--- a/bower.json
+++ b/bower.json
@@ -48,7 +48,8 @@
     "angular-oauth2": "^4.0.0",
     "angular-bootstrap-switch": "^0.5.0",
     "angular-bootstrap": "~1.3.2",
-    "AngularJS-Toaster": "angularjs-toaster#~2.0.0"
+    "AngularJS-Toaster": "angularjs-toaster#~2.0.0",
+    "angular-bootstrap-contextmenu": "~0.9.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
