--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,10 @@
     "angular-bootstrap-switch": "^0.5.0",
     "angular-bootstrap": "~1.3.2",
     "AngularJS-Toaster": "angularjs-toaster#~2.0.0",
-    "angular-bootstrap-contextmenu": "~0.9.7"
+    "angular-bootstrap-contextmenu": "~0.9.7",
+    "angular-translate-loader-partial": "^2.11.0",
+    "angular-translate-storage-cookie": "^2.11.0",
+    "angular-chart.js": "^0.10.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
