--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,9 @@
     "angular-bootstrap-contextmenu": "~0.9.7",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-translate-storage-cookie": "^2.11.0",
-    "angular-chart.js": "^0.10.2"
+    "angular-chart.js": "^0.10.2",
+    "bootstrap-ui": "ui.bootstrap#^1.3.3",
+    "angular-gridstack": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
