--- a/src/app/config.js.sample
+++ b/src/app/config.js.sample
@@ -1,4 +1,4 @@
-angular.module('sagremorApp',)
+angular.module('sagremorApp')
     .constant('angharadConstant', {
         'baseUrl': 'http://localhost:2473/',
         'prefixAngharad': 'angharad/',
