--- a/bower.json
+++ b/bower.json
@@ -54,7 +54,8 @@
     "angular-translate-storage-cookie": "^2.11.0",
     "angular-chart.js": "^0.10.2",
     "bootstrap-ui": "ui.bootstrap#^1.3.3",
-    "angular-gridstack": "^0.1.0"
+    "angular-gridstack": "^0.1.0",
+    "ui-navbar": "~0.4.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
