--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,6 @@
     "angular-translate": "~2.11.0",
     "angular-fontawesome": "^1.0.0",
     "bootstrap-sidebar": "^0.2.2",
-    "responsive-nav": "^1.0.39",
     "lodash": "^4.7.0",
     "ng-cookies": "~1.1.1",
     "angular-cookies": "~1.5.5",
@@ -55,7 +54,8 @@
     "angular-chart.js": "^0.10.2",
     "bootstrap-ui": "ui.bootstrap#^1.3.3",
     "angular-gridstack": "^0.1.0",
-    "ui-navbar": "~0.4.3"
+    "ui-navbar": "~0.4.3",
+    "gridstack": "~0.2.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
