--- a/bower.json
+++ b/bower.json
@@ -55,7 +55,8 @@
     "bootstrap-ui": "ui.bootstrap#^1.3.3",
     "angular-gridstack": "^0.1.0",
     "ui-navbar": "~0.4.3",
-    "gridstack": "~0.2.5"
+    "gridstack": "~0.2.5",
+    "angular-sanitize": "^1.5.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
