--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagremor",
-  "version": "0.0.1",
-  "description": "Angular example about the awesome project gulp-app-build-tasks.",
+  "version": "0.5.0",
+  "description": "Angharad web client application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,19 +16,24 @@
     "application",
     "examples"
   ],
-  "author": "Jimmy Fortin",
+  "author": "Nicolas Mora",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/babelouest/sagremor/issues"
   },
   "homepage": "https://github.com/babelouest/sagremor",
   "devDependencies": {
-	"gulp-app-build-tasks": "https://github.com/jimmyfortinx/gulp-app-build-tasks.git",
+    "gulp": "*",
+    "gulp-app-build-tasks": "https://github.com/jimmyfortinx/gulp-app-build-tasks.git",
+    "gulp-build": "^0.5.3",
     "jasmine-core": "*",
     "jasmine-terminal-reporter": "*",
     "jshint": "^2.9.2",
-    "karma-jasmine": "*",
     "karma": "*",
-    "gulp": "*"
+    "karma-angular-filesort": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-jasmine": "*",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.1"
   }
 }
