--- a/bower.json
+++ b/bower.json
@@ -51,14 +51,16 @@
     "angular-bootstrap-contextmenu": "~0.9.7",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-translate-storage-cookie": "^2.11.0",
-    "angular-chart.js": "^0.10.2",
+    "angular-moment": "^0.10.3",
+    "angular-chart.js": "#chartjs-2.0",
     "bootstrap-ui": "ui.bootstrap#^1.3.3",
     "angular-gridstack": "^0.1.0",
     "ui-navbar": "~0.4.3",
     "gridstack": "~0.2.5",
     "angular-sanitize": "^1.5.7",
     "bootstrap-ui-datetime-picker": "^2.4.0",
-    "components-font-awesome": "^4.6.3"
+    "components-font-awesome": "^4.6.3",
+    "Chart.js": "^2.1.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
