--- a/bower.json
+++ b/bower.json
@@ -60,7 +60,8 @@
     "angular-sanitize": "^1.5.7",
     "bootstrap-ui-datetime-picker": "^2.4.0",
     "components-font-awesome": "^4.6.3",
-    "Chart.js": "^2.1.6"
+    "Chart.js": "^2.1.6",
+    "angular-datatables": "^0.5.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
