--- a/bower.json
+++ b/bower.json
@@ -61,7 +61,8 @@
     "bootstrap-ui-datetime-picker": "^2.4.0",
     "components-font-awesome": "^4.6.3",
     "Chart.js": "^2.1.6",
-    "angular-datatables": "^0.5.4"
+    "angular-datatables": "^0.5.4",
+    "gridstack-angular": "^0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
