--- a/src/app/config.js.sample
+++ b/src/app/config.js.sample
@@ -1,7 +1,15 @@
-angular.module('sagremorApp')
-    .constant('angharadConfig', {
-        'baseUrl': 'http://localhost:2473/',
-        'prefixAngharad': 'angharad/',
-        'prefixBenoic': 'benoic/',
-        'prefixCarleon': 'carleon/'
+angular.module("sagremorApp")
+	.constant("angharadConfig", {
+		"baseUrl": "http://localhost:2473/",
+		"prefixAngharad": "angharad/",
+		"prefixBenoic": "benoic/",
+		"prefixCarleon": "carleon/"
+	})
+    .constant("carleonComponentsConfig", {
+		"mock-service": {
+			"enabled": false
+		},
+		"service-motion": {
+			"enabled": true
+		}
     });
