--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-project",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "homepage": "https://github.com/babelouest/sagremor",
   "authors": [
-    "Jimmy Fortin"
+    "Nicolas Mora"
   ],
   "description": "Angharad web client application",
   "main": "",
@@ -61,7 +61,8 @@
     "components-font-awesome": "^4.6.3",
     "Chart.js": "^2.1.6",
     "angular-datatables": "^0.5.4",
-    "gridstack-angular": "^0.4.0"
+    "gridstack-angular": "^0.4.0",
+    "ngGallery": "https://github.com/babelouest/ngGallery.git#title-thumbnail"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
