--- a/bower.json
+++ b/bower.json
@@ -51,7 +51,6 @@
     "angular-translate-loader-partial": "^2.11.0",
     "angular-translate-storage-cookie": "^2.11.0",
     "angular-moment": "^0.10.3",
-    "angular-chart.js": "#chartjs-2.0",
     "bootstrap-ui": "ui.bootstrap#^1.3.3",
     "angular-gridstack": "^0.1.0",
     "ui-navbar": "~0.4.3",
@@ -59,7 +58,6 @@
     "angular-sanitize": "^1.5.7",
     "bootstrap-ui-datetime-picker": "^2.4.0",
     "components-font-awesome": "^4.6.3",
-    "Chart.js": "^2.1.6",
     "angular-datatables": "^0.5.4",
     "gridstack-angular": "^0.4.0",
     "ngGallery": "https://github.com/babelouest/ngGallery.git#title-thumbnail"
@@ -68,6 +66,7 @@
     "angular-mocks": "~1.5.3"
   },
   "resolutions": {
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "angular": "~1.5.3"
   }
 }
