Add carleon-mpd service to control a distant mpd daemon

--- a/src/app/config.js.sample
+++ b/src/app/config.js.sample
@@ -11,5 +11,8 @@ angular.module("sagremorApp")
 		},
 		"service-motion": {
 			"enabled": true
+		},
+		"service-mpd": {
+			"enabled": true
 		}
     });
