--- a/bower.json
+++ b/bower.json
@@ -60,7 +60,7 @@
     "components-font-awesome": "^4.6.3",
     "angular-datatables": "^0.5.4",
     "gridstack-angular": "^0.4.0",
-    "ngGallery": "https://github.com/babelouest/ngGallery.git#title-thumbnail"
+    "angular-img-http-src": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
