--- a/bower.json
+++ b/bower.json
@@ -59,13 +59,16 @@
     "components-font-awesome": "^4.6.3",
     "angular-datatables": "^0.5.4",
     "gridstack-angular": "^0.4.0",
-    "angular-img-http-src": "^1.0.1"
+    "angular-img-http-src": "^1.0.1",
+    "angular-nvd3": "^1.0.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
   },
   "resolutions": {
     "bootstrap": "~3.3.6",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "d3": "^3.4.4",
+    "nvd3": "^1.7.1"
   }
 }
