--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.5.0",
   "homepage": "https://github.com/babelouest/sagremor",
   "authors": [
-    "Nicolas Mora"
+    "Nicolas Mora",
+    "Jimmy Fortin"
   ],
   "description": "Angharad web client application",
   "main": "",
@@ -59,7 +60,6 @@
     "components-font-awesome": "^4.6.3",
     "angular-datatables": "^0.5.4",
     "gridstack-angular": "^0.4.0",
-    "angular-img-http-src": "^1.0.1",
     "angular-nvd3": "^1.0.8"
   },
   "devDependencies": {
