--- a/bower.json
+++ b/bower.json
@@ -61,14 +61,15 @@
     "angular-datatables": "^0.5.4",
     "gridstack-angular": "^0.4.0",
     "angular-nvd3": "^1.0.8",
-    "angular-img-http-src": "^1.0.1"
+    "angular-img-http-src": "^1.0.1",
+    "oauth-ng": "^0.4.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
   },
   "resolutions": {
     "bootstrap": "~3.3.6",
-    "angular": "~1.5.3",
+    "angular": "1.5.8",
     "d3": "^3.4.4",
     "nvd3": "^1.7.1"
   }
