--- a/bower.json
+++ b/bower.json
@@ -62,7 +62,8 @@
     "gridstack-angular": "^0.4.0",
     "angular-nvd3": "^1.0.8",
     "angular-img-http-src": "^1.0.1",
-    "oauth-ng": "^0.4.10"
+    "oauth-ng": "^0.4.10",
+    "bootstrap-vertical-tabs": "^1.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
