--- a/src/app/config.js.sample
+++ b/src/app/config.js.sample
@@ -1,7 +1,17 @@
 angular.module("sagremorApp")
-	.constant("angharadConfig", {
-		"baseUrl": "http://localhost:2473/",
-		"prefixAngharad": "angharad/",
-		"prefixBenoic": "benoic/",
-		"prefixCarleon": "carleon/"
+.constant("angharadConfig", {
+        "baseUrl": "http://localhost:2473/",
+        "prefixAngharad": "angharad/",
+        "prefixBenoic": "benoic/",
+        "prefixCarleon": "carleon/",
+        oauth2: {
+            site: "https://oauth2.url/",
+            clientId: "sagremor",
+            responseType: "code",
+            redirectUri: "https://client.url/",
+            profileUri: "https://profile.url/",
+            scope: "angharad",
+            authorizePath: "auth",
+            tokenPath: "token",
+        }
 	})
